--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import './components/productList';
+@import './components/topics';
 @import './components/nav';
 @import './components/footer';
 @import './components/header';
