fixing last changes

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,5 @@
-@import './components/productList';
-@import './components/topics';
+@import './components/main';
+@import './components/card';
 @import './components/nav';
 @import './components/footer';
 @import './components/header';
