--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,5 @@
-$menu-color: #5D8FE8;
-$background-color: rgb(172, 255, 227);
+$menu-color: #d84d2a;
+$background-color: rgb(251, 240, 225);
 $text-color: #F7F1E7;
 
 $spacing-sm: 0.5rem;
