--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -6,6 +6,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    border-bottom: 3px solid black;
     & > img {
             width: 3rem;
             margin-bottom: $spacing-lg;
