--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,5 @@
-$menu-color: #d84d2a;
-$background-color: rgb(251, 240, 225);
+$menu-color: #b94325;
+$background-color: rgb(249, 244, 237);
 $text-color: #F7F1E7;
 
 $spacing-sm: 0.5rem;
