--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -6,12 +6,12 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 50%;
     &__element {
         text-decoration:none;
         color: $text-color;
         margin: 0 0.25rem;
-        font-family: 'Tapestry', cursive;
+        // font-family: 'Tapestry', cursive;
+        font-family: monospace;
         font-size: 1.2rem;
     }
 }
